feat: add user information